# Cube-API

./: docker-compose.yaml  pyproject.toml
app/integrations/: base_integration.py  cdn_integration.py  curseforge_integration.py  modrinth_integration.py
