[project]
name = "cube-api"
version = "0.1.0"
description = ""
authors = [{ name = "fadegor05", email = "fad.egor05@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.109.0,<0.110",
    "uvicorn[standart]>=0.27.0.post1,<0.28",
    "python-dotenv>=1.0.1,<2",
    "pydantic>=2.6.0,<3",
    "requests>=2.31.0,<3",
    "aiohttp>=3.11.2,<4",
    "pytest>=8.3.3,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "aioresponses>=0.7.7,<0.8",
    "motor>=3.6.0,<4",
]


[tool.ruff]
# match black
line-length = 120
target-version = "py312"
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ", # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100", # ignore missing docs
    "FIX002", # too verbose descriptions of todos
    "E501", # line too long
    "TRY003", # external messages in exceptions are too verbose

    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "TD002",
    "TD003",
    "B008"
]